# qml_camara

./: CMakeLists.txt  Main.qml  main.cpp
